# labanal

./: LICENSE  README.md
cpp/: .gitignore  CMakeLists.txt
cpp/include/: Hello.h
cpp/src/: Hello.cpp  main.cpp
database/: create_tables.sql
diagrams/: Architecture_V0.0.1.odt  CD_V1.0.0.drawio  DDF_V1.0.1.odg  MCD_V1.0.1.odg  MLD_V1.0.1.odg  UC-externV1.0.0.drawio  UC_V1.0.0.drawio  architecture_V0.0.1.excalidraw
docs/: code_review.md  database.md  dictionaire_donnees.md  git_workflow.md  product_backlog.md  style-guide.md  ui_style_guide.md
java/src/ma/labanal/: Main.java
java/src/main/ma/medlab/app/: App.java
java/src/main/ma/medlab/config/: DatabaseConfig.java
java/src/main/ma/medlab/enums/: Privilege.java  Statut.java
java/src/main/ma/medlab/model/: ChefTechnicien.java  Compte.java  Technicien.java
java/src/main/ma/medlab/repository/: ChefTechnicienRepository.java  CompteRepository.java  TechnicienRepository.java
java/src/main/ma/medlab/view/: ChefTechnicienView.java  MainMenuView.java  TechnicienView.java
www/assets/css/: colors.css  components.css  layout.css
www/internal/: index.php
www/internal/pages/: ajouter_employe.php  liste_employes.php  modifier_employe.php  traitement_employe.php
